# Project_1_Demo

./: README.md  claude-code-skills-lab-main.rar
Project_1/claude-code-skills-lab-main/task-management-api/: main.py  pyproject.toml
claude-code-skills-lab-main/: pytest.skill
task-management-api/: tasks.db
task-management-api/tests/: test_main.py
